<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_EventType" Id="{2537c8f3-6e65-4250-ad5c-ba3051ee5035}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_EventType :
(
	Alarm := 0,
	Message := 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>